--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,9 +182,7 @@
         text-align: center;
         width: 152px;
         font-size: 1rem;
-        padding: 10px;
-        margin-left: 5px;
-        margin-bottom: 5px;
+        margin: 15px;
     }
     /*Social*/
     .box-social {
