--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,16 +3,18 @@
     --font-subtitulo: 'Pathway Extreme', sans-serif;
     --font-corpo: 'Source Code Pro', monospace;
 }
-
+body{
+    background-image: radial-gradient(circle at center, #5170FF, #FF66C4);
+}
 /* Tela Inicial */
 .box-telaInicial {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     padding: 5rem 3rem 5rem 3rem;
-    background-image: radial-gradient(circle at center, #5170FF, #FF66C4);
-    border-bottom: 10px solid black;
+    border-bottom: 10px solid #35155D;
     width: 100%;
+    height: 600px;
 }
 
 .box-img {
@@ -24,7 +26,7 @@
 .imagem-principal {
     width: 25rem;
     border-radius: 50%;
-    box-shadow: 0px 40px 10px 5px rgb(0, 0, 0);
+    box-shadow: 0px 40px 10px 5px #35155D;
     /* clip-path: circle(50% at center); */
 }
 
@@ -36,14 +38,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30rem;
+    height: 500px;
+    width: 150px;
     margin: 3rem;
 }
-
+.box-info-txt{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 450px;
+    margin: 3rem;
+}
 .txt-titulo {
     font-family: var(--font-titulo);
     font-size: 6rem;
-    color: white;
+    color: #F1F0E8;
 }
 
 .txt-subtitulo {
@@ -51,13 +60,13 @@
     font-size: 1.5rem;
     padding: 0.3rem;
     margin: 1.5rem 0;
-
-    color: yellow;
+    user-select: none;
+    color: #F8DE22;
 }
 
 .txt-corpo {
     font-family: var(--font-corpo);
-    color: white;
+    color: #F1F0E8;
     margin-bottom: 2rem;
     text-align: justify;
 }
@@ -67,18 +76,18 @@
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    color: #fff;
+    color: #F1F0E8;
     margin-right: 10px;
     border-radius: 10px;
     transition: all 0.3s;
     text-decoration: none;
     font-family: var(--font-subtitulo);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 2px 4px #35155D;
   }
   
   .botao-download:hover {
     transform: scale(1.05);
-    border: 2px solid yellow;
+    border: 2px solid #F8DE22;
   }
   
   /* Estilos do ícone */
@@ -87,7 +96,7 @@
   }
   
   .botao-linkedin {
-    background-color: blue;
+    background-color: #0077B5;
   }
   
   .botao-transparente {
@@ -95,14 +104,62 @@
     border: none;
   }
   
-
+/*Projetos*/
+.projetos{
+    width: 100%;
+    padding: 50px;
+    background-color: #F1F0E8;
+    border-bottom: 10px solid #35155D;
+    box-sizing: border-box;
+}
+.box-projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 3rem 5rem 3rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+.projetos-titulo{
+    font-family: var(--font-titulo);
+    font-size: 4rem;
+    color: #000000;
+    text-align: center;
+    user-select: none;
+}
+.projetos-box-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 50px 0;
+}
+.projeto-card{
+    padding: 50px;
+    width: 300px;
+}
+.projeto-card:hover{
+    transform: scale(1.05);
+    transition: transform 0.8s;
+}
+.projeto-card h3{
+    font-family: var(--font-titulo);
+    font-size: 2rem;
+    padding-bottom: 2rem;
+}
+.img-card{
+    width: 300px;
+}
 .box-social {
     display: flex;
     flex-direction: column-reverse;
     align-items: first baseline;
     padding: 5rem 3rem 5rem 3rem;
     width: 100%;
-    background-image: linear-gradient(to left, rgb(81, 112, 255), rgba(255, 102, 196, 0)), url(/assets/img/cartoon.png);
+    height: 100%;
+    background-image: linear-gradient(to left, rgba(81, 113, 255, 0.24), rgba(255, 102, 196, 0)), url(/assets/img/cartoon.png);
     background-repeat: no-repeat;
     background-position: left 100% center;
     background-size: contain;
@@ -126,12 +183,11 @@
 }
 
 .contato{
-    color: black;
+    color: #F1F0E8;
     font-size: 5rem;
     padding-bottom: 2rem;
 }
-
-
+/*Responsividade*/
 @media screen and (max-width: 768px) {
     body {
         background-image: radial-gradient(circle at center, #5170FF, #FF66C4);
@@ -166,6 +222,7 @@
     .txt-titulo {
         font-size: 3rem;
         text-align: center;
+        color: #F1F0E8;
     }
 
     .txt-subtitulo {
