--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,17 +72,17 @@ body{
 .box-btn-init{
     display: flex;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: center;
     align-content: center;
-    width: 120px;
+    width: auto;
 }
 .botao-download {
-    display: inline-block;
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: max-content;
-    width: max-content;
-    padding: 1rem;
+    height: 50px;
+    width: 85px;
+    padding: 0.5rem;
     color: #F1F0E8;
     margin-right: 10px;
     border-radius: 10px;
@@ -126,9 +126,14 @@ body{
 .projetos-titulo{
     font-family: var(--font-titulo);
     font-size: 4rem;
-    color: #000000;
     text-align: center;
     user-select: none;
+    padding: 15px;
+    background-image: linear-gradient(to bottom, #ff66c4,#a95cff, #5171ff);
+    color: black;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .projetos-box-card{
     display: flex;
@@ -140,21 +145,69 @@ body{
     margin: 50px 0;
 }
 .projeto-card{
-    padding: 50px;
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-start;
+    padding: 20px 40px;
+    margin: 0 20px
+    width: 500px;
+    height: 500px;
+    text-align: justify;
+    background-image: radial-gradient(circle at center, #5171ff80, #ff66c450);
+    border: orangered 1px solid;
+    border-radius: 10px;
 }
 .projeto-card:hover{
     transform: scale(1.05);
-    transition: transform 0.8s;
+    transition: 1.5s;
+    border: #35155D 5px solid;
 }
 .projeto-card h3{
     font-family: var(--font-titulo);
     font-size: 2rem;
+    text-align: center;
+    user-select: none;
+    margin: 10px 0;
+}
+.projeto-card p{
+    font-family: var(--font-corpo);
+    margin-top: 15px;
     padding-bottom: 2rem;
 }
-.img-card{
-    width: 300px;
+.card-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
 }
+.box-projeto-img-descricao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    margin-bottom: 50px;
+    box-sizing: border-box;
+}
+.img-card{
+    max-width: 300px;
+    max-width: 200px;
+    border: #FF66C4 1px solid;
+}
+.projeto-descricao{
+    font-family: var(--font-corpo);
+    font-size: 1rem;
+    text-align: center;
+    user-select: none;
+    margin: 10px 0;
+}
+.btn-verMais{
+    font-family: var(--font-subtitulo);
+    font-size: 1.5rem;
+    padding: 5px;
+    color: black;
+}
+
 .box-social {
     display: flex;
     flex-direction: column-reverse;
@@ -204,6 +257,7 @@ body{
         padding: 0;
         background: none;
         border: none;
+        margin-bottom: 10px;
     }
 
     .box-img {
@@ -250,6 +304,43 @@ body{
         width: 152px;
         font-size: 1rem;
         margin: 15px;
+    }
+    /*Projetos*/
+    .projetos{
+        padding: 0;
+        background-color: #F1F0E8;
+        border-bottom: 10px solid #35155D;
+    }
+    .box-projetos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+    .projetos-titulo{
+        margin-top: 40px
+    }
+    .projetos-box-card {
+        flex-direction: column;
+        margin: 10px;
+    }
+    .projeto-card {
+        width: 600px;
+        height: 300px;
+        margin: 10px;
+    }
+    .box-projeto-img-descricao {
+        flex-direction: row;
+        align-items:center;
+        width: 100%;
+        height: 100%;
+        margin-bottom: 0;
+    }
+    .img-card {
+        max-width: 300px;
+        max-width: 200px;
+        margin-right: 50px;
+        border: #FF66C4 1px solid;
     }
     /*Social*/
     .box-social {
