--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,14 +6,52 @@
 body{
     background-image: radial-gradient(circle at center, #5170FF, #FF66C4);
 }
+/* Header */
+header{
+    background-color: #35155D;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+}
+.titulo-header{
+    font-family: var(--font-titulo);
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    margin: 0 1rem;
+    user-select: none;
+    color: #F1F0E8;
+}
+.menu{
+    font-family: var(--font-subtitulo);
+    display: flex;
+    justify-content: space-around;
+    align-items: end;
+}
+.menu a{
+    text-decoration: none;
+    color: #F1F0E8;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    transition: all 0.3s;
+}
+.menu a:hover{
+    color: #F8DE22;
+    transform: scale(1.1);
+}
+
 /* Tela Inicial */
 .box-telaInicial {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     padding: 5rem 3rem 5rem 3rem;
-    border-bottom: 10px solid #35155D;
-    height: 600px;
+    /* border-bottom: 10px solid #35155D;*/
+    height: 800px;
 }
 
 .box-img {
@@ -93,8 +131,8 @@ body{
   }
   
   .botao-download:hover {
-    transform: scale(1.05);
-    border: 2px solid #F8DE22;
+    transform: scale(1.015);
+    border: 1px solid #F8DE22;
   }
   
   /* Estilos do ícone */
@@ -110,7 +148,52 @@ body{
     background-color: transparent;
     border: none;
   }
-  
+/* Formações */
+.minhasFormacoes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    font-family: var(--font-titulo);
+    height: 600px;
+    border-bottom: 10px solid #35155D;
+}
+.formacoes-titulo{
+    font-family: var(--font-titulo);
+    font-size: 4rem;
+    text-align: center;
+    user-select: none;
+    padding: 15px;
+    color: #F1F0E8;
+}
+.cards-formacao{
+    display: flex;
+}
+.card-formacao {
+    padding: 10px;
+    border: solid 1px #35155D;
+    margin: 20px;
+    height: 100px;
+    width: 300px;
+    background-image: radial-gradient(circle at center, #5171ff80, #ff66c450);
+    display: flex;
+}
+.card-formacao:hover{
+    transition: 0.5s;
+    border: #F8DE22 1px solid;
+}
+.tituto-formacao {
+    color: #F1F0E8;
+    font-family: var(--font-subtitulo);
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.data-formacao {
+    font-family: var(--font-corpo);
+    font-size: 1rem;
+}
+
 /*Projetos*/
 .projetos{
     padding: 50px;
@@ -118,9 +201,12 @@ body{
     border-bottom: 10px solid #35155D;
 }
 .box-projetos {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    justify-content: center;
     align-items: center;
+    margin-top: 30px;
     padding: 5rem 3rem 5rem 3rem;
 }
 .projetos-titulo{
@@ -135,38 +221,27 @@ body{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.projetos-box-card{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    margin: 50px 0;
-}
 .projeto-card{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:flex-start;
     padding: 20px 40px;
-    margin: 0 20px
-    width: 500px;
-    height: 500px;
-    text-align: justify;
+    margin: 0 10px
+    width: 100px;
+    height: 200px;
     background-image: radial-gradient(circle at center, #5171ff80, #ff66c450);
-    border: orangered 1px solid;
+    border: #ff66c4 1px solid;
     border-radius: 10px;
 }
 .projeto-card:hover{
-    transform: scale(1.05);
+    transform: scale(1.02);
     transition: 1.5s;
-    border: #35155D 5px solid;
+    border: #F8DE22 1px solid;
 }
 .projeto-card h3{
     font-family: var(--font-titulo);
     font-size: 2rem;
-    text-align: center;
     user-select: none;
     margin: 10px 0;
 }
@@ -179,31 +254,32 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: start;
+    border-bottom: #FF66C4 1px solid;
 }
 .box-projeto-img-descricao{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: 200px;
-    height: 200px;
+    height: 220px;
     margin-bottom: 50px;
-    box-sizing: border-box;
+    padding: 0 30px;
 }
 .img-card{
-    max-width: 300px;
     max-width: 200px;
+    max-width: 150px;
     border: #FF66C4 1px solid;
 }
 .projeto-descricao{
     font-family: var(--font-corpo);
     font-size: 1rem;
+    margin-left: 20px;
     text-align: center;
     user-select: none;
-    margin: 10px 0;
+    box-sizing: border-box;
 }
 .btn-verMais{
     font-family: var(--font-subtitulo);
-    font-size: 1.5rem;
+    font-size: 1rem;
     padding: 5px;
     color: black;
 }
